# dtOcean

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDelta3D.cmake  FindODE.cmake  FindOSG.cmake  FindOSGOCEAN.cmake  FindOpenThreads.cmake
examples/: CMakeLists.txt
examples/testOcean/: CMakeLists.txt  testentrypoint.cpp  testexport.h
ext/osgocean/: AUTHORS.txt  CMakeLists.txt
ext/osgocean/CMakeModules/: Findfftss.cmake  Findfftw3-3.cmake  Findfftw3f-3.cmake
ext/osgocean/include/osgOcean/: DistortionSurface  FFTOceanSurface  OceanScene  OceanTechnique  OceanTile  RandUtils  ShaderManager
ext/osgocean/src/oceanExample/: SkyDome.cpp
ext/osgocean/src/osgOcean/: Cylinder.cpp  FFTSimulation.cpp  MipmapGeometry.cpp  OceanTile.cpp
ext/src/osgOcean-rev_256/: AUTHORS.txt  CMakeLists.txt  README.txt
ext/src/osgOcean-rev_256/CMakeModules/: Findfftss.cmake  Findfftw3-3.cmake  Findfftw3f-3.cmake
ext/src/osgOcean-rev_256/build_vs2008x86/: CMakeCache.txt  cmake_install.cmake
ext/src/osgOcean-rev_256/build_vs2008x86/install_deploy/lib/: osgOcean.lib  osgOceand.lib
ext/src/osgOcean-rev_256/build_vs2008x86/src/: cmake_install.cmake
ext/src/osgOcean-rev_256/build_vs2008x86/src/oceanExample/: cmake_install.cmake
ext/src/osgOcean-rev_256/build_vs2008x86/src/osgOcean/: INSTALL.vcproj  cmake_install.cmake  osgOcean.vcproj
ext/src/osgOcean-rev_256/build_vs2010x86/: ALL_BUILD.vcproj  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpgradeLog.XML  ZERO_CHECK.vcproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  osgOcean.sln  osgOcean.sln.old  osgOcean.suo.old
ext/src/osgOcean-rev_256/build_vs2010x86/Win32/Release/ALL_BUILD/: ALL_BUILD.lastbuildstate
ext/src/osgOcean-rev_256/build_vs2010x86/install_deploy/include/osgOcean/: MipmapGeometryVBO
ext/src/osgOcean-rev_256/build_vs2010x86/install_deploy/lib/: osgOcean.lib  osgOceand.lib
ext/src/osgOcean-rev_256/build_vs2010x86/lib/: osgOcean.lib  osgOceand.lib
ext/src/osgOcean-rev_256/build_vs2010x86/src/: INSTALL.vcproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
ext/src/osgOcean-rev_256/build_vs2010x86/src/oceanExample/: INSTALL.vcproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  oceanExample.vcproj  oceanExample.vcxproj  oceanExample.vcxproj.filters
ext/src/osgOcean-rev_256/build_vs2010x86/src/osgOcean/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  osgOcean.vcxproj  osgOcean.vcxproj.filters
ext/src/osgOcean-rev_256/include/OceanExample/: Scene.h  SceneEventHandler.h  ScopedTimer.h  TextHUD.h
ext/src/osgOcean-rev_256/resources/shaders/: osgOcean_heightmap.vert
ext/src/osgOcean-rev_256/scripts/: convert_shaders.py  copyright_notice.txt
ext/src/osgOcean-rev_256/src/: CMakeLists.txt
ext/src/osgOcean-rev_256/src/oceanExample/: CMakeLists.txt
ext/src/osgOcean-rev_256/src/osgOcean/: CMakeLists.txt  Cylinder.cpp  DistortionSurface.cpp  FFTOceanSurface.cpp  FFTOceanSurfaceVBO.cpp  FFTOceanTechnique.cpp  FFTSimulation.cpp  GodRayBlendSurface.cpp  GodRays.cpp  OceanScene.cpp  OceanTechnique.cpp  ShaderManager.cpp  SiltEffect.cpp  Version.cpp  WaterTrochoids.cpp
ext/src/osgocean/include/OceanExample/: Cylinder.h
ext/src/osgocean/include/osgOcean/: Cylinder
ext/src/osgocean/resources/shaders/: default_scene.frag  default_scene.vert  downsample_glare.frag  glare_composite.frag  skydome.frag
ext/src/osgocean/src/oceanExample/: CMakeLists.txt  Cylinder.cpp  application.cpp
ext/src/osgocean/src/osgOcean/: CMakeLists.txt  DistortionSurface.cpp  DynamicShader.cpp  FFTOceanSurface.cpp  GodRayBlendSurface.cpp  GodRays.cpp  OceanScene.cpp  OceanTechnique.cpp  ScreenAlignedQuad.cpp  ShaderManager.cpp  SiltEffect.cpp  WaterTrochoids.cpp
include/dtOcean/: actorregistry.h  cylinder.h  export.h  oceanactor.h  oceanclampactor.h  oceanconfigactor.h  skydome.h  spheresegment.h
src/: CMakeLists.txt  actorregistry.cpp  cylinder.cpp  oceanactor.cpp  oceanclampactor.cpp  oceanconfigactor.cpp  skydome.cpp  spheresegment.cpp
